fixed some styling on the featured project section. Improved legibility.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -557,7 +557,7 @@ strong {
 }
 
 .featured-projects .project-caption {
-	width: 140px;
+	width: 150px;
 	flex-shrink: 0;
 	margin-left: 30px
 }
@@ -575,9 +575,19 @@ strong {
 }
 
 .featured-projects .project-name a {
-	font-weight: 700
+    font-weight: 700;
+    font-size: 17rem;
 }
 
+.featured-projects .project p {
+    font-size: 14rem !important;
+}
+
+@media screen and (max-width: 768px){
+    .featured-projects .project-name a {
+        font-size: 1.1em;
+    }
+}
 .featured-projects .project p {
 	font-size: .9em;
 	line-height: 1.5
